--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="open-sans-normal">
-     <header>
+     <header class="header">
         <!-- nav section -->
 <nav>
 <h3 class="nav-tittle dark2">LOGO</h3>
 <ul>
     <li><a href=""><button class="btn-primary">Sign Up</button></a></li>
 </ul>
-
 </nav>
+<div class="banner">
+<h1>Cool Dark UI Template for<br> Webflow Agencies</h1>
 
-  
+<button class="btn-primary btn">Stay Focused</button>
 </div>
-    </header>
+</header>
     <main>
 
     </main>
