--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
     <li><a href=""><button class="btn-primary">Sign Up</button></a></li>
 </ul>
 </nav>
-<div class="banner">
-<h1>Cool Dark UI Template for<br> Webflow Agencies</h1>
-
-<button class="btn-primary btn">Stay Focused</button>
+<div class="container">
+  <h1>Cool Dark UI Template for
+    <br> Webflow Agencies!.</h1>
+  <button class="centered-button">Stay Focused</button>
 </div>
 </header>
     <main>
+<div class="contain-container">
+    <div class="contant">
+        <h3 class="section-head">See It in Action</h3>
+        <p class="section-title">xplore the live preview and imagine your brand in this bold new look.</p>
+        <button class="btn-primary" >Launch Live Preview</button>
+    </div>
+    <img class="image" src="Assets/wc-mini.png" alt="">
+</div>
 
     </main>
     <footer>
