--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href=""><button class="btn-primary">Sign Up</button></a></li>
 </ul>
 </nav>
+<!-- banner -->
 <div class="container">
   <h1>Cool Dark UI Template for
     <br> Webflow Agencies!.</h1>
@@ -124,22 +125,23 @@
 </section>
     </main>
    <!-- footer -->
-   <footer class="footer">
-  <div class="footer-content">
-    <div class="website-info">
-      <h2 class="website-name">Website Name</h2>
-      <p class="website-subtitle">Your Website Subtitle</p>
-    </div>
-    <nav class="footer-nav">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/how-it-works">How it works</a></li>
-        <li><a href="/services">Services</a></li>
-      </ul>
-    </nav>
-  </div>
+  <footer>
+    <section>
+        <div class="main-footer">
+            <h1>LOGO</h1>
+            <div class="footer">
+<P class="center">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</P>
+            </div>
+            <U>
+               
+             <li><a href="">Home</a></li>
+             <li><a href="">Home</a></li>
+             <li><a href="">How it Works</a></li>
+             <li><a href="">Services</a></li>
 
-
+            </U>
+        </div>
+    </section>
+</footer>
 </body>
 </html>
