--- a/index.html
+++ b/index.html
@@ -125,23 +125,18 @@
 </section>
     </main>
    <!-- footer -->
-  <footer>
-    <section>
-        <div class="main-footer">
-            <h1>LOGO</h1>
-            <div class="footer">
-<P class="center">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</P>
-            </div>
-            <U>
-               
-             <li><a href="">Home</a></li>
-             <li><a href="">Home</a></li>
-             <li><a href="">How it Works</a></li>
-             <li><a href="">Services</a></li>
+ 
+    <footer class="footer-section">
+        <div class="footer-logo">logo</div>
+        <p class="footer-descrition">Ready to elevate your online presence? Contact us <br> today to discuss your project and discover how we can bring your vision to life.</p>
+        <nav class="footer-nav">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">How it work </a>
+            <a href="">Services</a>
+        </nav>
 
-            </U>
-        </div>
-    </section>
+    </footer>
 </footer>
 </body>
 </html>
