--- a/index.html
+++ b/index.html
@@ -105,24 +105,33 @@
   </div>
 </section>
 
-<section class="table">
-    <div >
-        <h2 class="sohan">Let's Get in Touch</h2>
-        <div>
-            <form action="">
-                <label for="">Email</label><br>
-                <input type="Email"><br>
-                
-<label for="">name</label><br>
-<input type="text"><br>
-<label for="">Masseage</label>
-<br>
-<textarea cols="20 " rows="10"></textarea>
 
-            </form>
-        </div>
+<!-- table -->
+ <section class="newslatter-section">
+    <div class="news-text">
+        <h2 class="newslatter-h2">Let’s Get in <br> Touch</h2>
     </div>
-</section>
+   <div class="newslatter-container">
+    <form  class="newslatter-from">
+        <div class="news-group">
+            <label for="">Eamil</label><br>
+            <input type="eamil" placeholder="Enter your email">
+        </div>
+
+        <div class="news-group">
+            <label for="">Name</label><br>
+            <input type="text" placeholder="Enter your name">
+        </div>
+
+        <div class="news-group">
+            <label for="">Massege</label><br>
+            <textarea id="Massege" placeholder=" write you"></textarea>
+        </div>
+        <button type="submit" class="contacg-submit-btn">submit</button>
+    </form>
+   </div>
+ </section>
+
     </main>
    <!-- footer -->
  
